services/media/bazarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/name: bazarr
spec:
  type: ClusterIP
  ports:
    - port: 6767
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bazarr
