services/media/bazarr/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Bazarr
    gethomepage.dev/description: Gestión de subtítulos
    gethomepage.dev/group: Media
    gethomepage.dev/icon: bazarr.png
    gethomepage.dev/href: https://bazarr.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - bazarr.bonchan.org
  rules:
    - backendRefs:
        - name: bazarr
          port: 6767
